CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Algolib)

INCLUDE_DIRECTORIES(common)

SET ( QT_USE_QTXML TRUE )

FIND_PACKAGE ( Qt4 REQUIRED )
INCLUDE( ${QT_USE_FILE})
INCLUDE_DIRECTORIES(
        ${QT_INCLUDE_DIR}
        ${QT_QTCORE_INCLUDE_DIR}
        ${QT_QTGUI_INCLUDE_DIR}
        ${QT_QTXML_INCLUDE_DIR}        
        )

SET ( COMPONENTS
    centralized
    decentralized
    ants
    common
      )

FOREACH(COMPONENT ${COMPONENTS})
   ADD_SUBDIRECTORY(${COMPONENT})
ENDFOREACH(COMPONENT)

FILE(GLOB SOURCE_FILES *.cpp)
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})
TARGET_LINK_LIBRARIES (${PROJECT_NAME} ${COMPONENTS} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTXML_LIBRARY})
