CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Algolib)

INCLUDE_DIRECTORIES(common)

SET ( QT_USE_QTXML TRUE )

FIND_PACKAGE ( Qt4 REQUIRED )
INCLUDE( ${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

INCLUDE_DIRECTORIES(
        ${CMAKE_CURRENT_BINARY_DIR}
        ${QT_INCLUDE_DIR}
        ${QT_QTCORE_INCLUDE_DIR}
        ${QT_QTGUI_INCLUDE_DIR}
        ${QT_QTXML_INCLUDE_DIR}        
        )

SET ( COMPONENTS
    centralized
    decentralized
    ants
    common
      )

FOREACH(COMPONENT ${COMPONENTS})
   ADD_SUBDIRECTORY(${COMPONENT})
ENDFOREACH(COMPONENT)

FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB QT_HEADERS *.h)
QT4_WRAP_CPP(QT_HEADERS_MOC ${QT_HEADERS})
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES} ${QT_HEADERS_MOC})
TARGET_LINK_LIBRARIES (${PROJECT_NAME} ${COMPONENTS} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTXML_LIBRARY})
