CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(algo)

FIND_PACKAGE ( Qt4 REQUIRED )
INCLUDE( ${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
SET ( COMPONENTS
      )

FOREACH(COMPONENT ${COMPONENTS})
   ADD_SUBDIRECTORY(${COMPONENT})
ENDFOREACH(COMPONENT)

SET(LIBRARY_SET ${COMPONENTS} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTXML_LIBRARY})

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)
TARGET_LINK_LIBRARIES (${PROJECT_NAME} ${LIBRARY_SET})
